--- a/css/styles.css
+++ b/css/styles.css
@@ -8,4 +8,22 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+    color: #444444;
+}
+
+section {
+    padding: 3rem 0 4rem 0;
+}
+
+h1 {
+    font-size: 3rem;
+    font-weight: normal;
+}
+
+.gray {
+    background-color: #f7f7f7;
+}
+
+footer {
+    background-color: #3788bf;
 }
