--- a/css/styles.css
+++ b/css/styles.css
@@ -20,8 +20,53 @@ h1 {
     font-weight: normal;
 }
 
+h1.title {
+    margin-bottom: 2rem;
+    text-align: center;
+    font-weight: bold;
+}
+
 .gray {
     background-color: #f7f7f7;
+}
+
+.container {
+    max-width: 1000px;
+    margin: auto;
+}
+
+.intro p {
+    margin: 1rem 0;
+    font-size: 1.5rem;
+    font-weight: 100;
+}
+
+.intro .cta {
+    margin: 2rem 0;
+}
+
+.button {
+    background-color: #3396f3;
+    color: white;
+    padding: 10px 25px;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-right: 5px;
+    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
+}
+
+.button:hover {
+    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
+}
+
+.primary {
+    background-color: #3396f3;
+    color: white;
+}
+
+.secondary {
+    background-color: white;
+    color: #444;
 }
 
 footer {
