--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,45 @@ h1.title {
     color: #444;
 }
 
+.cards {
+    display: flex;
+    justify-content: space-between;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+
+    height: 150px;
+    width: 18%;
+
+    border-radius: 10px;
+    color: white;
+    font-size: 1.7rem;
+}
+
+.card.red {
+    background-color: #ec454e;
+}
+
+.card.blue {
+    background-color: #42b0f8;
+}
+
+.card.purple {
+    background-color: #9e69d5;
+}
+
+.card.yellow {
+    background-color: #f4a823;
+}
+
+.card.green {
+    background-color: #3cbfa1;
+}
+
 footer {
     background-color: #3788bf;
 }
