--- a/css/styles.css
+++ b/css/styles.css
@@ -108,6 +108,35 @@ h1.title {
     background-color: #3cbfa1;
 }
 
+.members {
+    display: flex;
+    justify-content: space-between;
+}
+
+.members img {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+}
+
 footer {
     background-color: #3788bf;
+}
+
+footer ul {
+    display: flex;
+    padding-top: 3rem;
+
+    justify-content: space-evenly;
+    list-style-type: none;
+}
+
+footer a {
+    color: white;
+}
+
+footer p.copyright {
+    padding: 3rem 0;
+    color: #ffffffdd;
+    text-align: center;
 }
